# motion_primitives

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/motion_primitives/: in_place_turn_node.hpp  stop_motion_node.hpp
launch/: test_stop_turn.launch.py
src/: in_place_turn.cpp  in_place_turn_node.cpp  stop_motion.cpp  stop_motion_node.cpp
